--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,12 @@ services:
     ports:
       - "6379:6379"
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.3
+        aliases: 
+          - redis-master
+    healthcheck:
+      test: ["CMD", "redis-cli", "info"]
   slave1:
     image: redis:alpine
     container_name: redis-slave-1
@@ -18,7 +23,12 @@ services:
     depends_on:
       - master
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.4
+        aliases: 
+          - redis-slave-1
+    healthcheck:
+      test: ["CMD", "redis-cli", "info"]
   slave2:
     image: redis:alpine
     container_name: redis-slave-2
@@ -28,7 +38,12 @@ services:
     depends_on:
       - master
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.5
+        aliases: 
+          - redis-slave-2
+    healthcheck:
+      test: ["CMD", "redis-cli", "info"]
   sentinel1:
     image: redis:alpine
     container_name: redis-sentinel-1
@@ -36,43 +51,83 @@ services:
     volumes:
     - "./sentinel/sentinel1.conf:/usr/local/etc/redis/sentinel.conf"
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.6
+        aliases: 
+          - redis-sentinel-1
+    depends_on: 
+      - master
+      - slave1
+      - slave2
   sentinel2:
     image: redis:alpine
     container_name: redis-sentinel-2
     # ports:
-    # - "26380:26379"           
+    # - "26380:26379"
     command: redis-sentinel /usr/local/etc/redis/sentinel.conf
     volumes:
     - "./sentinel/sentinel2.conf:/usr/local/etc/redis/sentinel.conf"
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.7
+        aliases: 
+          - redis-sentinel-2
+    depends_on: 
+      - sentinel1
   sentinel3:
     image: redis:alpine
     container_name: redis-sentinel-3
     # ports:
-    # - "26381:26379"           
+    # - "26381:26379"
     command: redis-sentinel /usr/local/etc/redis/sentinel.conf
     volumes:
     - "./sentinel/sentinel3.conf:/usr/local/etc/redis/sentinel.conf"
     networks:
-      - redis-ha
+      redis-ha:
+        ipv4_address: 172.23.0.8
+        aliases: 
+          - redis-sentinel-3
+    depends_on: 
+      - sentinel2
   monitor:
     image: vieux/redmon:latest
     container_name: redmon
     ports:
-    - "4567:4567"     
-    # command: redmon -r http://localhost:9736/sentinel/redis-sentinel-1:26379,redis-sentinel-2:26379,,redis-sentinel-3:26379/master
+    - "4567:4567"
+    # command: redmon -r http://localhost:9736/sentinel/redis-sentinel-1:26379,redis-sentinel-2:26379,redis-sentinel-3:26379/master
     command: redmon -r redis://:123456@redis-master:6379
     networks:
-      - redis-ha
-  benchmark:
-    image: redislabs/memtier_benchmark:1.2.17
-    container_name: benchmark
-    # command: memtier_benchmark -s redis-sentinel-1:6379,redis-sentinel-2:6379,redis-sentinel-3:6379
-    command: memtier_benchmark -s redis-master -a 123456
+      redis-ha:
+        aliases: 
+          - redmon
+  app:
+    image: gregg/redisapp:0.1
+    build:
+      context: ./app/
+      dockerfile: Dockerfile
+    container_name: redisapp
     networks:
-      - redis-ha    
+      redis-ha:
+        aliases: 
+          - redisapp
+    depends_on: 
+      - master
+      - slave1
+      - slave2
+      - sentinel1
+      - sentinel2
+      - sentinel3
+  # benchmark:
+  #   image: redislabs/memtier_benchmark:1.2.17
+  #   container_name: benchmark
+  #   # command: memtier_benchmark -s redis-sentinel-1:6379,redis-sentinel-2:6379,redis-sentinel-3:6379
+  #   command: memtier_benchmark -s redis-master -a 123456 --test-time 3600
+  #   networks:
+  #     - redis-ha
 
 networks:
   redis-ha:
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.23.0.0/24"
