--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,8 +94,8 @@ services:
     container_name: redmon
     ports:
     - "4567:4567"
-    # command: redmon -r http://localhost:9736/sentinel/redis-sentinel-1:26379,redis-sentinel-2:26379,redis-sentinel-3:26379/master
-    command: redmon -r redis://:123456@redis-master:6379
+    command: redmon -r http://localhost:9736/sentinel/redis-sentinel-1:26379,redis-sentinel-2:26379,redis-sentinel-3:26379/master
+    # command: redmon -r redis://:123456@redis-master,redis-slave-1:6379
     networks:
       redis-ha:
         aliases: 
