--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   master:
     image: redis:alpine
     container_name: redis-master
-    command: redis-server --requirepass 123456
+    command: redis-server --requirepass 123456 --masterauth 123456
     ports:
       - "6379:6379"
     networks:
